# pg_cmd_queue

./: .gitignore  LICENCE.txt  META.json  Makefile  README.md  pg_cmd_queue.control  pg_cmd_queue_runner.pgc
expected/: test_dump_restore.out  test_extension_update_paths.out
pg_cmdqd/: .gitignore  CMakeLists.txt  Makefile  argv_guard.cpp  argv_guard.h  base64.hpp  build.sh  cmdqueue.cpp  cmdqueue.h  cmdqueuerunner.cpp  cmdqueuerunner.h  cmdqueuerunner.tpp  cmdqueuerunnercollection.cpp  cmdqueuerunnercollection.h  cmdqueuerunnermanager.cpp  cmdqueuerunnermanager.h  envp_guard.cpp  envp_guard.h  fdguard.cpp  fdguard.h  logger.cpp  logger.h  lwpg_array.cpp  lwpg_array.h  lwpg_conn.cpp  lwpg_conn.h  lwpg_context.cpp  lwpg_context.h  lwpg_error.cpp  lwpg_error.h  lwpg_hstore.cpp  lwpg_hstore.h  lwpg_notify.h  lwpg_nullable.cpp  lwpg_nullable.h  lwpg_result.cpp  lwpg_result.h  lwpg_result_iterator.cpp  lwpg_result_iterator.h  lwpg_results.cpp  (+30 more)
pg_cmdqd/pq-raii/: libpq-raii.hpp
sql/: META.sql  README.sql  pg_cmd_queue--0.1.0.sql  test_dump_restore.sql  test_extension_update_paths.sql
